force-app/main/default/objects/Closing_hz__c/Closing_hz__c.object-meta.xml
<CustomObject>
    <label>Closing</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Closing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>