force-app/main/default/objects/Closing_hz__c/fields/Accept_Offer_on_System__c.field-meta.xml
<CustomField>
    <fullName>Accept_Offer_on_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Offer on System</label>
    <type>Checkbox</type>
</CustomField>