force-app/main/default/objects/Closing_hz__c/fields/Access_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Access_Arrangements__c</fullName>
    <label>Access Arrangements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>