force-app/main/default/objects/Closing_hz__c/fields/Add_Buyer_and_Seller_to_Ex_forms__c.field-meta.xml
<CustomField>
    <fullName>Add_Buyer_and_Seller_to_Ex_forms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Buyer and Seller to Ex forms</label>
    <type>Checkbox</type>
</CustomField>