force-app/main/default/objects/Closing_hz__c/fields/Add_buyer_seller_to_forms__c.field-meta.xml
<CustomField>
    <fullName>Add_buyer_seller_to_forms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add buyer &amp; seller to forms</label>
    <type>Checkbox</type>
</CustomField>