force-app/main/default/objects/Closing_hz__c/fields/Add_Sales_Progressor_to_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Add_Sales_Progressor_to_Whatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Sales Progressor to Whatsapp</label>
    <type>Checkbox</type>
</CustomField>