force-app/main/default/objects/Closing_hz__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>Address of property they are buying</inlineHelpText>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>