force-app/main/default/objects/Closing_hz__c/fields/After_10_min__c.field-meta.xml
<CustomField>
    <fullName>After_10_min__c</fullName>
    <formula>LastModifiedDate + (10/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After 10 min</label>
    <type>DateTime</type>
</CustomField>