force-app/main/default/objects/Closing_hz__c/fields/After_3_min__c.field-meta.xml
<CustomField>
    <fullName>After_3_min__c</fullName>
    <formula>LastModifiedDate + (3/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After 3 min</label>
    <type>DateTime</type>
</CustomField>