force-app/main/default/objects/Closing_hz__c/fields/Agent_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Agent_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Assistant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Closings</relationshipName>
    <type>Lookup</type>
</CustomField>