force-app/main/default/objects/Closing_hz__c/fields/Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commission__c</fullName>
    <inlineHelpText>Total amount that the agent will earn upon closing. To calculate automatically, fill in the commission details below.</inlineHelpText>
    <label>Agent Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>