force-app/main/default/objects/Closing_hz__c/fields/AgentCommission__c.field-meta.xml
<CustomField>
    <fullName>AgentCommission__c</fullName>
    <formula>IF(NOT(ISNULL(TotalCommissionAmount__c)), (Agent_Commission__c / TotalCommissionAmount__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>