force-app/main/default/objects/Closing_hz__c/fields/AML_Check__c.field-meta.xml
<CustomField>
    <fullName>AML_Check__c</fullName>
    <description>Once received AML documents this can be completed</description>
    <label>AML Check</label>
    <type>Date</type>
</CustomField>