force-app/main/default/objects/Closing_hz__c/fields/AML_Status__c.field-meta.xml
<CustomField>
    <fullName>AML_Status__c</fullName>
    <label>AML Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asked</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Chase</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Passed To Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>