force-app/main/default/objects/Closing_hz__c/fields/Amount_Paid_In_Advance__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_In_Advance__c</fullName>
    <label>Amount Paid In Advance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>