force-app/main/default/objects/Closing_hz__c/fields/Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Appraisal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appraisal</label>
    <type>Checkbox</type>
</CustomField>