force-app/main/default/objects/Closing_hz__c/fields/Asking_Price__c.field-meta.xml
<CustomField>
    <fullName>Asking_Price__c</fullName>
    <inlineHelpText>asking price of the property</inlineHelpText>
    <label>Asking Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>