force-app/main/default/objects/Closing_hz__c/fields/Attorney_Contact__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Attorney Contact)</relationshipLabel>
    <relationshipName>Closings_Attorney_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>