force-app/main/default/objects/Closing_hz__c/fields/B_Sent_to_JMI__c.field-meta.xml
<CustomField>
    <fullName>B_Sent_to_JMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B - Sent to JMI</label>
    <type>Checkbox</type>
</CustomField>