force-app/main/default/objects/Closing_hz__c/fields/Background_Check_Complete__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Background Check Complete</label>
    <type>Checkbox</type>
</CustomField>