force-app/main/default/objects/Closing_hz__c/fields/Background_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Date__c</fullName>
    <label>Background Check Approval Date</label>
    <type>Date</type>
</CustomField>