force-app/main/default/objects/Closing_hz__c/fields/Block_Status_for_3_min__c.field-meta.xml
<CustomField>
    <fullName>Block_Status_for_3_min__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to Blocking Status in Sale Closing for 3 minutes.</description>
    <label>Block Status for 3 min</label>
    <type>Checkbox</type>
</CustomField>