force-app/main/default/objects/Closing_hz__c/fields/BS_All_Searches_Back__c.field-meta.xml
<CustomField>
    <fullName>BS_All_Searches_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BS All Searches Back</label>
    <type>Checkbox</type>
</CustomField>