force-app/main/default/objects/Closing_hz__c/fields/BS_Applied_for_Searches__c.field-meta.xml
<CustomField>
    <fullName>BS_Applied_for_Searches__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>BS = Buyers Solicitor</inlineHelpText>
    <label>BS Applied for Searches</label>
    <type>Checkbox</type>
</CustomField>