force-app/main/default/objects/Closing_hz__c/fields/BS_Reported_to_Buyer__c.field-meta.xml
<CustomField>
    <fullName>BS_Reported_to_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BS Reported to Buyer</label>
    <type>Checkbox</type>
</CustomField>