force-app/main/default/objects/Closing_hz__c/fields/BS_Satisfied_All_Enquiries__c.field-meta.xml
<CustomField>
    <fullName>BS_Satisfied_All_Enquiries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BS Satisfied All Enquiries</label>
    <type>Checkbox</type>
</CustomField>