force-app/main/default/objects/Closing_hz__c/fields/Buyer_Agency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Agency_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Agency Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Buyer Agency Contact)</relationshipLabel>
    <relationshipName>Closings_Buyer_Agency</relationshipName>
    <type>Lookup</type>
</CustomField>