force-app/main/default/objects/Closing_hz__c/fields/Buyer_Agent_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Agent_Split_Amount__c</fullName>
    <formula>Buyer_Side_Split_Amount__c    *  Buyer_Agent_Split_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Agent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>