force-app/main/default/objects/Closing_hz__c/fields/Buyer_Agent_Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Agent_Split_Percent__c</fullName>
    <inlineHelpText>Percentage of the commission that is paid to the agent (example 50%).
Note: only complete this section if representing the buyer on this transaction.</inlineHelpText>
    <label>Primary Agent%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>