force-app/main/default/objects/Closing_hz__c/fields/Buyer_Deposit_with_Solicitor__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Deposit_with_Solicitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyer Deposit with Solicitor</label>
    <type>Checkbox</type>
</CustomField>