force-app/main/default/objects/Closing_hz__c/fields/Buyer_Disclosures_Date__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Disclosures_Date__c</fullName>
    <label>Buyer Disclosures Date</label>
    <type>Date</type>
</CustomField>