force-app/main/default/objects/Closing_hz__c/fields/Buyer_Having_Additional_Survey__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Having_Additional_Survey__c</fullName>
    <label>Buyer Having Additional Survey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>