force-app/main/default/objects/Closing_hz__c/fields/Buyer_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Nationality__c</fullName>
    <formula>Buyer_Tenant__r.OtherCountry</formula>
    <label>Buyer Nationality</label>
    <type>Text</type>
</CustomField>