force-app/main/default/objects/Closing_hz__c/fields/Buyer_Returned__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Buyer has returned solicitor paperwork and paid for searches</description>
    <label>Buyer Returned Starter Forms</label>
    <type>Checkbox</type>
</CustomField>