force-app/main/default/objects/Closing_hz__c/fields/Buyer_Returned_Signed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Returned_Signed_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyer Returned Signed Contract</label>
    <type>Checkbox</type>
</CustomField>