force-app/main/default/objects/Closing_hz__c/fields/Buyer_s_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Buyer_s_Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Inquiry_hz__c</referenceTo>
    <relationshipLabel>Closings</relationshipLabel>
    <relationshipName>Closings</relationshipName>
    <type>Lookup</type>
</CustomField>