force-app/main/default/objects/Closing_hz__c/fields/Buyer_Side_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Side_Split_Amount__c</fullName>
    <formula>TotalCommissionAmount__c - Seller_Side_Split_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Side Split Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>