force-app/main/default/objects/Closing_hz__c/fields/Buyer_Side_Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Side_Split_Percent__c</fullName>
    <inlineHelpText>Percentage of the total commission that goes to the buyer side (example: 3%)</inlineHelpText>
    <label>Agent Commission(Sale)  %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>