force-app/main/default/objects/Closing_hz__c/fields/Buyer_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Buyer)</relationshipLabel>
    <relationshipName>Closings_Client</relationshipName>
    <type>Lookup</type>
</CustomField>