force-app/main/default/objects/Closing_hz__c/fields/Buyers_Sol_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Buyers_Sol_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyers Sol Confirmed</label>
    <type>Checkbox</type>
</CustomField>