force-app/main/default/objects/Closing_hz__c/fields/Buyers_Solicitor__c.field-meta.xml
<CustomField>
    <fullName>Buyers_Solicitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyers Solicitor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Buyers Solicitor)</relationshipLabel>
    <relationshipName>Closings2</relationshipName>
    <type>Lookup</type>
</CustomField>