force-app/main/default/objects/Closing_hz__c/fields/Call_Buyer_Seller_congratulate_key__c.field-meta.xml
<CustomField>
    <fullName>Call_Buyer_Seller_congratulate_key__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Buyer &amp; Seller - congratulate + key</label>
    <type>Checkbox</type>
</CustomField>