force-app/main/default/objects/Closing_hz__c/fields/Call_Buyer_Seller_to_Congratulate__c.field-meta.xml
<CustomField>
    <fullName>Call_Buyer_Seller_to_Congratulate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Buyer &amp; Seller to Congratulate</label>
    <type>Checkbox</type>
</CustomField>