force-app/main/default/objects/Closing_hz__c/fields/Chain_sheet_on_record__c.field-meta.xml
<CustomField>
    <fullName>Chain_sheet_on_record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chain sheet on record</label>
    <type>Checkbox</type>
</CustomField>