force-app/main/default/objects/Closing_hz__c/fields/Chain_Sheet_URL__c.field-meta.xml
<CustomField>
    <fullName>Chain_Sheet_URL__c</fullName>
    <label>Chain Sheet URL</label>
    <type>Url</type>
</CustomField>