force-app/main/default/objects/Closing_hz__c/fields/Check_board_has_been_changed__c.field-meta.xml
<CustomField>
    <fullName>Check_board_has_been_changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>On Pre sale agreed if the agent didn&apos;t ask you to change the board to &apos;SOLD&apos; then change it now.</description>
    <label>Check board has been changed</label>
    <type>Checkbox</type>
</CustomField>