force-app/main/default/objects/Closing_hz__c/fields/Check_social_second_wind_isn_t_scheduled__c.field-meta.xml
<CustomField>
    <fullName>Check_social_second_wind_isn_t_scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check social second wind isn&apos;t scheduled</label>
    <type>Checkbox</type>
</CustomField>