force-app/main/default/objects/Closing_hz__c/fields/Clerk__c.field-meta.xml
<CustomField>
    <fullName>Clerk__c</fullName>
    <label>Clerk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chase</fullName>
            </value>
            <value>
                <fullName>Suzy</fullName>
            </value>
            <value>
                <fullName>Open House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>