force-app/main/default/objects/Closing_hz__c/fields/Clerk_Contact__c.field-meta.xml
<CustomField>
    <fullName>Clerk_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clerk Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Clerk Contact)</relationshipLabel>
    <relationshipName>Closings7</relationshipName>
    <type>Lookup</type>
</CustomField>