force-app/main/default/objects/Closing_hz__c/fields/Client_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Client_Lead_Source__c</fullName>
    <formula>IF( ISBLANK( Buyer_Tenant__r.LastName ) , TEXT(Renter__r.LeadSource) , TEXT(Buyer_Tenant__r.LeadSource))</formula>
    <inlineHelpText>Original lead source of the client on this transaction</inlineHelpText>
    <label>Client Lead Source</label>
    <type>Text</type>
</CustomField>