force-app/main/default/objects/Closing_hz__c/fields/Client_Lead_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Client_Lead_Source_Category__c</fullName>
    <description>Original lead source category of the client on this transaction</description>
    <formula>IF( ISBLANK( Buyer_Tenant__r.LastName ) , TEXT(Renter__r.LeadSourceCategory_hz__c) , TEXT(Buyer_Tenant__r.LeadSourceCategory_hz__c))</formula>
    <label>Client Lead Source Category</label>
    <type>Text</type>
</CustomField>