force-app/main/default/objects/Closing_hz__c/fields/Closing_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Closed_Date__c</fullName>
    <label>Closing Closed Date</label>
    <type>Date</type>
</CustomField>