force-app/main/default/objects/Closing_hz__c/fields/Closing_Date_Plus_90__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date_Plus_90__c</fullName>
    <formula>Closing_Closed_Date__c + 90</formula>
    <label>Closing Date Plus 90</label>
    <type>Date</type>
</CustomField>