force-app/main/default/objects/Closing_hz__c/fields/Closing_Date_with_7PM__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date_with_7PM__c</fullName>
    <label>Closing Date with 7PM</label>
    <type>DateTime</type>
</CustomField>