force-app/main/default/objects/Closing_hz__c/fields/Closing_Date_without_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date_without_Weekend__c</fullName>
    <label>Closing Date without Weekend</label>
    <type>DateTime</type>
</CustomField>