force-app/main/default/objects/Closing_hz__c/fields/Closing_Name__c.field-meta.xml
<CustomField>
    <fullName>Closing_Name__c</fullName>
    <formula>IF( ISBLANK( Buyer_Tenant__r.FirstName ) , Renter__r.FirstName , Buyer_Tenant__r.FirstName)&amp;&quot; &quot;&amp; IF( ISBLANK( Buyer_Tenant__r.LastName ) , Renter__r.LastName , Buyer_Tenant__r.LastName )&amp;&quot; &quot;&amp;&quot;-&quot;&amp;&quot; &quot;&amp; Listing_hz__r.Address_hz__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Name</label>
    <type>Text</type>
</CustomField>