force-app/main/default/objects/Closing_hz__c/fields/Closing_Probability__c.field-meta.xml
<CustomField>
    <fullName>Closing_Probability__c</fullName>
    <label>Closing Probability %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>