force-app/main/default/objects/Closing_hz__c/fields/Closing_Status__c.field-meta.xml
<CustomField>
    <fullName>Closing_Status__c</fullName>
    <label>Closing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>