force-app/main/default/objects/Closing_hz__c/fields/ClosingDate_with_5PM__c.field-meta.xml
<CustomField>
    <fullName>ClosingDate_with_5PM__c</fullName>
    <formula>DATETIMEVALUE(ClosingDate__c)  + (17/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ClosingDate with 5PM</label>
    <type>DateTime</type>
</CustomField>