force-app/main/default/objects/Closing_hz__c/fields/Co_Agent__c.field-meta.xml
<CustomField>
    <fullName>Co_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PowerNegCoAgent</relationshipName>
    <type>Lookup</type>
</CustomField>