force-app/main/default/objects/Closing_hz__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>Listing_hz__r.Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>