force-app/main/default/objects/Closing_hz__c/fields/Commission_Due__c.field-meta.xml
<CustomField>
    <fullName>Commission_Due__c</fullName>
    <formula>IF(NOT(ISBLANK( Offer_hz__c )) ,Offer_hz__r.Potential_Commission__c , Fee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>