force-app/main/default/objects/Closing_hz__c/fields/Commission_Due_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Commission_Due_Inc_VAT__c</fullName>
    <formula>IF(NOT(ISBLANK( Offer_hz__c )) ,Offer_hz__r.Potential_Commission__c*1.20 , Fee__c*1.20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Due (Inc. VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>