force-app/main/default/objects/Closing_hz__c/fields/Commission_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Commission_Inc_VAT__c</fullName>
    <formula>Commission__c * 1.20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission % (Inc. VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>