force-app/main/default/objects/Closing_hz__c/fields/Company_Buyer_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>Company_Buyer_Split_Amount__c</fullName>
    <formula>Buyer_Side_Split_Amount__c  *  Company_Buyer_Split_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Buyer Split Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>