force-app/main/default/objects/Closing_hz__c/fields/Company_Commission__c.field-meta.xml
<CustomField>
    <fullName>Company_Commission__c</fullName>
    <inlineHelpText>Total amount that the company will earn upon closing. To calculate automatically, fill in the commission details below.</inlineHelpText>
    <label>Company Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>