force-app/main/default/objects/Closing_hz__c/fields/Company_Seller_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>Company_Seller_Split_Amount__c</fullName>
    <formula>Seller_Side_Split_Amount__c  *  Company_Seller_Split_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Seller Split Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>