force-app/main/default/objects/Closing_hz__c/fields/Company_Seller_Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>Company_Seller_Split_Percent__c</fullName>
    <inlineHelpText>Percentage of the commission that is paid to the company (example 50%).
Note: only complete this section if representing the seller on this transaction.</inlineHelpText>
    <label>Company Seller Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>