force-app/main/default/objects/Closing_hz__c/fields/Create_Progression_sheet__c.field-meta.xml
<CustomField>
    <fullName>Create_Progression_sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Print and add to 31 folder and add to timetable</description>
    <label>Create Progression sheet</label>
    <type>Checkbox</type>
</CustomField>