force-app/main/default/objects/Closing_hz__c/fields/Create_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Create_Whatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Create whatsapp with buyer, agent, office mobiles and sales progressor</description>
    <label>Create Whatsapp</label>
    <type>Checkbox</type>
</CustomField>