force-app/main/default/objects/Closing_hz__c/fields/Credit_Check_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Approval_Date__c</fullName>
    <label>Credit Check Approval Date</label>
    <type>Date</type>
</CustomField>