force-app/main/default/objects/Closing_hz__c/fields/Date_of_Additional_Survey__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Additional_Survey__c</fullName>
    <inlineHelpText>this may be the same date as the mortgage valuation if buyer is having the mortgage valuation upgraded to a homebuyers or building survey</inlineHelpText>
    <label>Date of Additional Survey</label>
    <type>Date</type>
</CustomField>