force-app/main/default/objects/Closing_hz__c/fields/Date_Testing__c.field-meta.xml
<CustomField>
    <fullName>Date_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Date Testing</label>
    <type>Checkbox</type>
</CustomField>