force-app/main/default/objects/Closing_hz__c/fields/Deposit_Held__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Held__c</fullName>
    <label>Deposit Held</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TDS Custodial</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>