force-app/main/default/objects/Closing_hz__c/fields/Deposit_ID__c.field-meta.xml
<CustomField>
    <fullName>Deposit_ID__c</fullName>
    <label>Deposit ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>