force-app/main/default/objects/Closing_hz__c/fields/Deposit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Notes__c</fullName>
    <label>Deposit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>