force-app/main/default/objects/Closing_hz__c/fields/Diarise_Completion__c.field-meta.xml
<CustomField>
    <fullName>Diarise_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diarise Completion</label>
    <type>Checkbox</type>
</CustomField>