force-app/main/default/objects/Closing_hz__c/fields/Diarise_to_call_SS_for_Same_day_faster__c.field-meta.xml
<CustomField>
    <fullName>Diarise_to_call_SS_for_Same_day_faster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diarise to call SS for Same day faster</label>
    <type>Checkbox</type>
</CustomField>