force-app/main/default/objects/Closing_hz__c/fields/Diarise_to_check_for_review__c.field-meta.xml
<CustomField>
    <fullName>Diarise_to_check_for_review__c</fullName>
    <label>Diarise to check for review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer left review</fullName>
            </value>
            <value>
                <fullName>Seller left review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>