force-app/main/default/objects/Closing_hz__c/fields/Don_t_Send_to_PCM__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Send_to_PCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t Send to PCM</label>
    <type>Checkbox</type>
</CustomField>