force-app/main/default/objects/Closing_hz__c/fields/Earnest_Money__c.field-meta.xml
<CustomField>
    <fullName>Earnest_Money__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Earnest Money</label>
    <type>Checkbox</type>
</CustomField>