force-app/main/default/objects/Closing_hz__c/fields/Earnest_Money_Amount__c.field-meta.xml
<CustomField>
    <fullName>Earnest_Money_Amount__c</fullName>
    <label>Earnest Money Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>