force-app/main/default/objects/Closing_hz__c/fields/Email_everyone_powerbespoke_co_uk__c.field-meta.xml
<CustomField>
    <fullName>Email_everyone_powerbespoke_co_uk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Let everyone know we have exchanged and wen completion is</description>
    <label>Email everyone@powerbespoke.co.uk</label>
    <type>Checkbox</type>
</CustomField>