force-app/main/default/objects/Closing_hz__c/fields/Enquiries_Ongoing__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_Ongoing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enquiries Ongoing</label>
    <type>Checkbox</type>
</CustomField>