force-app/main/default/objects/Closing_hz__c/fields/Escrow_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Instructions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escrow Instructions</label>
    <type>Checkbox</type>
</CustomField>