force-app/main/default/objects/Closing_hz__c/fields/Escrow_Instructions_Date__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Instructions_Date__c</fullName>
    <label>Escrow Instructions Date</label>
    <type>Date</type>
</CustomField>