force-app/main/default/objects/Closing_hz__c/fields/Escrow_Title_Contact__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Title_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escrow/Title Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Escrow/Title Contact)</relationshipLabel>
    <relationshipName>Closings_Title_Agency_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>