force-app/main/default/objects/Closing_hz__c/fields/Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Executed_Date__c</fullName>
    <label>Executed Date</label>
    <type>Date</type>
</CustomField>