force-app/main/default/objects/Closing_hz__c/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <inlineHelpText>EXCLUDING VAT</inlineHelpText>
    <label>Fee £</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>