force-app/main/default/objects/Closing_hz__c/fields/Fee_Share__c.field-meta.xml
<CustomField>
    <fullName>Fee_Share__c</fullName>
    <label>Fee Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>