force-app/main/default/objects/Closing_hz__c/fields/Full_Mortgage_Application_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Full_Mortgage_Application_Submitted__c</fullName>
    <inlineHelpText>Confirmation from buyers mortgage advisor that full mortgage application has been submitted</inlineHelpText>
    <label>Full Mortgage Application Submitted</label>
    <type>Date</type>
</CustomField>