force-app/main/default/objects/Closing_hz__c/fields/Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guarantor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Guarantor)</relationshipLabel>
    <relationshipName>Closings5</relationshipName>
    <type>Lookup</type>
</CustomField>