force-app/main/default/objects/Closing_hz__c/fields/Has_Rent_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Has_Rent_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if this tenancy has a rent warranty policy in place</inlineHelpText>
    <label>Has Rent Warranty</label>
    <type>Checkbox</type>
</CustomField>