force-app/main/default/objects/Closing_hz__c/fields/Home_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Home_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Inspection</label>
    <type>Checkbox</type>
</CustomField>