force-app/main/default/objects/Closing_hz__c/fields/Home_Inspection_Contact__c.field-meta.xml
<CustomField>
    <fullName>Home_Inspection_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Inspection Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Home Inspection Contact)</relationshipLabel>
    <relationshipName>Closings_Inspection_Home_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>